@@ -112,13 +112,13 @@ sk_sp<GrGpu> GrMtlGpu::Make(const GrMtlBackendContext& context, const GrContextO
     if (@available(macOS 10.14, iOS 10.0, *)) {
         // no warning needed
     } else {
-        SkDebugf("*** Warning ***: this OS version is deprecated and will no longer be supported " \
-                 "in future releases.\n");
+        SkDebugf("*** Error ***: Skia's Metal backend no longer supports this OS version.\n");
 #ifdef SK_BUILD_FOR_IOS
-        SkDebugf("Minimum recommended version is iOS 10.0.\n");
+        SkDebugf("Minimum supported version is iOS 10.0.\n");
 #else
-        SkDebugf("Minimum recommended version is MacOS 10.14.\n");
+        SkDebugf("Minimum supported version is MacOS 10.14.\n");
 #endif
+        return nullptr;
     }
 
     id<MTLDevice> GR_NORETAIN device = (__bridge id<MTLDevice>)(context.fDevice.get());
