@@ -6,6 +6,9 @@ This file includes a list of high level updates for each milestone release.
 
 Milestone 92
 ------------
+  * Metal support has been removed for versions of iOS older than 10.0 and MacOS older than 10.14.
+    https://review.skia.org/401816
+
   * Removed custom attributes from SkVertices and the corresponding `varying` feature from
     SkRuntimeEffect.
     https://review.skia.org/398222
